https://jira.jboss.org/browse/JBIDE-7255 - fixed
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@25793 a97e2381-89e5-4abb-bab3-167db6db766c